2012-04-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bibtex-2.c: Do not check whether Glob_Str_Size > Buf_Size,
	and Ent_Str_size > Buf_Size, since Buf_Size can be changed
	dynamically, whereas Glob_Str_Size and Ent_Str_Size are maximum
	values which are constants.

2012-04-10  Norbert Preining  <preining@logic.at>

	* bibtex-2.c: Do not check whether Glob_Str_Size > Buf_Size,
	since the former can be changed dynamically
	* bibtex.h: Adjust BUF_SIZE to the value that matches bibtex.ch

2012-02-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bibtex.c (eoln): Accept both CR and LF as end-of-line.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (DISTCLEANFILES): Add CXXLD.sh.

2011-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* datatype.h (PdsType_T): Do not declare as unsigned.
	* bibtex-3.c (pre_define): Cast xord[] index to UChar_T.
	* utils.c (c8read_csf): Cast name_of_file to 'char *'.
	* bibtex-2.c: A few casts to 'char *'.

2011-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c (setup_bound_variable): `program_invocation_name' has
	been renamed into `kpse_invocation_name'.

2010-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/bibtexu.test (new): Just 'bibtexu -version'.
	* Makefile.am: Add the new test.

2010-05-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bibtex.h: fix a bug in the macro BIB_XRETALLOC_STRING.

2010-03-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bibtex*.[ch], gblvars.h, utils.c: Obtain Ent_Str_Size and
	Glob_Str_Size from environment or config file.
	Dynamically allocate global strings arrays, literal stack
	arrays, and single function space instances; reallocate them
	as required.

2010-03-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c: Default csfile and Max_Strings from env or config.